cambio de nombre de empresa

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="img" href="/public/1.png" />
+    <link rel="icon" type="img" href="/public/logosmileatwork.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kidverse-peru</title>
+    <title>Smile At Work</title>
   </head>
   <body>
     <div id="root"></div>
